--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <script>
         // Redirigir automáticamente al archivo PDF
         document.addEventListener("DOMContentLoaded", () => {
-            window.location.href = "ListaDePreciosCheamos.pdf";
+            window.location.href = "ListaDePreciosChamos.pdf";
         });
     </script>
 </head>
 <body>
     <h1>Redirigiendo a la lista de precios...</h1>
-    <p>Si no eres redirigido automáticamente, <a href="ListaDePreciosCheamos.pdf">haz clic aquí para ver el PDF</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="ListaDePreciosChamos.pdf">haz clic aquí para ver el PDF</a>.</p>
 </body>
 </html>
+
