--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
+    
     <script>
-        // Redirigir automáticamente al archivo PDF
         document.addEventListener("DOMContentLoaded", () => {
-            window.location.href = "ListaDePreciosChamos.pdf";
+            window.location.href = "precioschamos.pdf";
         });
     </script>
 </head>
 <body>
     <h1>Redirigiendo a la lista de precios...</h1>
-    <p>Si no eres redirigido automáticamente, <a href="ListaDePreciosChamos.pdf">haz clic aquí para ver el PDF</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="precioschamos.pdf">haz clic aquí para ver el PDF</a>.</p>
 </body>
 </html>
 
